Style updated